@@ -35,6 +35,14 @@
 <div class="document">
 
 
+<p>2017-11-22  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+<ul class="simple">
+<li>www/download.rst: Change &quot;Czechoslovakian ftp mirror&quot; to &quot;Czech
+ftp mirror&quot;.  Resolves SourceForge bug #520 &quot;[web] Download sites:
+non-existent country&quot;.</li>
+</ul>
+</blockquote>
 <p>2017-11-21  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
