@@ -91,7 +91,7 @@ Visual C++ workspace) may be found here.</blockquote>
 <p>Here are some known download sites for GraphicsMagick:</p>
 <blockquote>
 <p><a class="reference external" href="https://sourceforge.net/projects/graphicsmagick/files/">SourceForge file download</a> (http protocol)</p>
-<p><a class="reference external" href="http://78.108.103.11/MIRROR/ftp/GraphicsMagick/">Czechoslovakian ftp mirror</a> (http protocol)</p>
+<p><a class="reference external" href="http://78.108.103.11/MIRROR/ftp/GraphicsMagick/">Czech ftp mirror</a> (http protocol)</p>
 <p><a class="reference external" href="ftp://ftp.icm.edu.pl/pub/unix/graphics/GraphicsMagick/">Polish ftp mirror via ftp</a> (ftp protocol)</p>
 <p><a class="reference external" href="http://ftp.icm.edu.pl/pub/unix/graphics/GraphicsMagick/">Polish ftp mirror via http</a> (http protocol)</p>
 </blockquote>
