@@ -1,3 +1,9 @@
+2017-11-22  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* www/download.rst: Change "Czechoslovakian ftp mirror" to "Czech
+	ftp mirror".  Resolves SourceForge bug #520 "[web] Download sites:
+	non-existent country".
+
 2017-11-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* coders/wpg.c (ReadWPGImage): Fix excessive use of disk resources
